--- a/styles/chunk5.main.css
+++ b/styles/chunk5.main.css
@@ -1096,7 +1096,8 @@
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .percent .percentage-description .description {
-    font-size: 21px;
+    font-size: 24px;
+    line-height: 1.2em;
   }
 }
 .percent .percentage-description .see-calcs {
@@ -1511,6 +1512,11 @@
 }
 .omnipack-distributors {
   padding: 80px 0 0 0;
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .omnipack-distributors {
+    padding: 40px 0 0 0;
+  }
 }
 .omnipack-distributors .content {
   max-width: 1260px;
