New dev deploy from 18/1/2021

--- a/styles/chunk5.main.css
+++ b/styles/chunk5.main.css
@@ -103,6 +103,7 @@
   cursor: default;
 }
 .page-nav--container .page-nav-left .nav-tabs .tab.active .tab-label {
+  cursor: default;
   color: #A0A0A2;
 }
 .page-nav--container .page-nav-left .nav-tabs .tab:hover:not(.active) .tab-label {
@@ -186,7 +187,7 @@
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
-  line-height: 26px;
+  line-height: 1.3em;
   color: #000000;
   width: 392px;
   margin: 0;
@@ -546,7 +547,7 @@
   z-index: 999999;
 }
 .presentation .video-frame {
-  width: 720px;
+  width: 840px;
   display: flex;
   flex-direction: column;
 }
@@ -854,7 +855,7 @@
   }
 }
 .omnipack-noborders {
-  margin: 160px 0;
+  margin: 100px 0;
   background: #ffffff;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
@@ -866,6 +867,7 @@
 }
 .omnipack-noborders .content {
   flex-direction: row-reverse;
+  padding-top: 60px;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .omnipack-noborders .content {
@@ -873,6 +875,9 @@
     padding-top: 60px;
     align-items: flex-start;
   }
+}
+.omnipack-noborders .content .content-text {
+  margin-bottom: 60px;
 }
 .omnipack-noborders .content .content-text .compare-table {
   padding-top: 60px;
@@ -886,16 +891,23 @@
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
   font-weight: 600;
-  font-size: 19px;
-  line-height: 23px;
+  font-size: 17px;
+  line-height: 130%;
   letter-spacing: -0.03em;
   text-align: left;
   color: #000000;
-  border-bottom: 1px solid #EAEAEA;
-  padding-bottom: 12px;
+  padding: 12px;
+  border: 1px solid #EAEAEA;
+}
+.omnipack-noborders .content .content-text .compare-table th:not(:first-child) {
+  border-left: none;
 }
 .omnipack-noborders .content .content-text .compare-table th:first-child {
-  padding-right: 24px;
+  border-radius: 4px 0 0 0;
+  min-width: 260px;
+}
+.omnipack-noborders .content .content-text .compare-table th:last-child {
+  border-radius: 0 4px 0 0;
 }
 .omnipack-noborders .content .content-text .compare-table tbody tr td:first-child {
   font-family: var(--roboto);
@@ -903,22 +915,36 @@
   font-weight: normal;
   font-size: 15px;
   line-height: 21px;
-  color: #626264;
-  padding-right: 24px;
+  color: #2D2D2D;
+  padding: 12px;
 }
 .omnipack-noborders .content .content-text .compare-table tbody tr td {
-  padding: 12px 0;
   font-family: var(--roboto);
   font-style: normal;
   font-weight: normal;
   font-size: 15px;
   line-height: 21px;
   color: #2D2D2D;
+  padding: 12px;
+  border: 1px solid #EAEAEA;
+  border-top: none;
+}
+.omnipack-noborders .content .content-text .compare-table tbody tr td:not(:first-child) {
+  border-left: none;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .omnipack-noborders .content .content-text .compare-table tbody tr td {
     width: auto;
   }
+}
+.omnipack-noborders .content .content-text .compare-table tbody tr:last-child td:first-child {
+  border-radius: 0 0 0 4px;
+}
+.omnipack-noborders .content .content-text .compare-table tbody tr:last-child td:last-child {
+  border-radius: 0 0 4px 0;
+}
+.omnipack-noborders .content .content-text .compare-table tbody tr:nth-child(odd) {
+  background: #f5f5f7;
 }
 .omnipack-noborders .content .compare-info-rows {
   padding: 0 24px;
@@ -934,7 +960,7 @@
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
   font-weight: 600;
-  font-size: 17px;
+  font-size: 19px;
   line-height: 1.3em;
   letter-spacing: -0.03em;
   color: #000000;
@@ -1003,7 +1029,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url(/assets/images/pallet-screen-cover.png);
+  background-image: url(/assets/images/simulation-cover.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -1410,7 +1436,7 @@
 }
 .omnipack-installation .installation-container .right-side .image-container .clickable {
   font-family: var(--roboto);
-  font-size: 19px;
+  font-size: 17px;
   color: #ffffff;
   font-weight: 500;
   background: rgba(0, 0, 0, 0.32);
@@ -1418,10 +1444,11 @@
   position: absolute;
   z-index: 10;
   border-radius: 26px;
-  line-height: 19px;
+  line-height: 17px;
   cursor: pointer;
   padding: 10px 14px;
   transition: background 0.12s ease-out;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .omnipack-installation .installation-container .right-side .image-container .clickable {
@@ -1429,7 +1456,7 @@
   }
 }
 .omnipack-installation .installation-container .right-side .image-container .clickable:hover {
-  background: rgba(0, 0, 0, 0.92);
+  background: rgba(0, 0, 0, 0.7);
 }
 .omnipack-installation .installation-container .right-side .image-container .clickable.nuc {
   bottom: 150px;
