--- a/styles/chunk3.main.css
+++ b/styles/chunk3.main.css
@@ -730,7 +730,7 @@ section .section-text.centered {
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
-  line-height: 26px;
+  line-height: 1.3em;
   color: #000000;
   width: 392px;
   margin: 0;
