--- a/styles/chunk4.main.css
+++ b/styles/chunk4.main.css
@@ -119,7 +119,7 @@
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
-  line-height: 26px;
+  line-height: 1.3em;
   color: #000000;
   width: 392px;
   margin: 0;
@@ -771,7 +771,7 @@ h2.subheader {
   font-weight: 700;
   margin: 0;
   padding: 0;
-  margin-bottom: 12px;
+  margin-bottom: 8px;
   letter-spacing: -0.01em;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
