--- a/styles/chunk4.main.css
+++ b/styles/chunk4.main.css
@@ -82,6 +82,7 @@
     justify-content: stretch;
     padding-top: 20px;
     padding-bottom: 32px;
+    width: 100%;
   }
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
@@ -200,6 +201,11 @@
   opacity: 0.9;
   cursor: pointer;
 }
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .contact-form .form-container .form-button {
+    width: auto;
+  }
+}
 .button-loader {
   display: flex;
   flex-direction: row;
@@ -239,7 +245,7 @@
   }
 }
 .action-button-orange {
-  padding: 14px 16px;
+  padding: 16px 16px;
   border-radius: 10px;
   text-align: center;
   background: #ff9500;
