--- a/styles/chunk3.main.css
+++ b/styles/chunk3.main.css
@@ -723,22 +723,23 @@ section .section-text.centered {
   line-height: 32px;
   color: #000000;
   margin: 0;
-  padding-bottom: 12px;
+  padding-bottom: 24px;
   letter-spacing: -0.02em;
 }
 .contact-form .form-container .form-text {
-  font-family: 'Roboto', sans-serif;
+  font-family: var(--roboto);
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 1.3em;
-  color: #000000;
+  color: #2d2d2d;
   width: 392px;
   margin: 0;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .contact-form .form-container .form-text {
     width: auto;
+    font-size: 19px;
   }
 }
 .contact-form .form-container .form-inputs {
@@ -866,6 +867,12 @@ section .section-text.centered {
   color: #ffffff;
   font-weight: 500;
   letter-spacing: 0.01em;
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .action-button-orange {
+    font-size: 17px;
+    letter-spacing: 0;
+  }
 }
 .action-button-orange.grey {
   background: #DCDCDC;
