New dev deploy from 23/1/2021

--- a/styles/chunk5.main.css
+++ b/styles/chunk5.main.css
@@ -1099,6 +1099,7 @@
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .percent {
     padding: 60px 0;
+    min-height: none;
   }
 }
 .percent .percentage-description {
@@ -1116,7 +1117,7 @@
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
   font-weight: bold;
-  font-size: 196px;
+  font-size: 164px;
   line-height: 1em;
   text-align: center;
   background: radial-gradient(74.76% 135.05% at 21.23% 25.24%, #FFA800 0%, #FF7337 100%);
@@ -1139,6 +1140,7 @@
   font-size: 48px;
   line-height: 1.1em;
   text-align: center;
+  letter-spacing: -0.01em;
   color: #FFFFFF;
   margin: 0;
 }
