--- a/styles/chunk4.main.css
+++ b/styles/chunk4.main.css
@@ -475,6 +475,9 @@
   width: 100%;
   height: 640px;
   z-index: 1;
+  display: flex;
+  justify-content: center;
+  background: #cecdce;
 }
 .page-container--section .video-wrapper .opack_preview_image {
   display: none;
@@ -486,7 +489,7 @@
   right: 0;
   bottom: 0;
   top: 0;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0);
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .page-container--section .video-wrapper .video-cover {
@@ -527,6 +530,9 @@
   .page-container--section .video-wrapper img {
     height: 240px;
   }
+}
+.page-container--section .video-wrapper video {
+  max-width: 1440px;
 }
 .page-container--section .video-control {
   width: 42px;
